--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h1 class="mb-1">Kyle Pearson</h1>
+        <h1 class="mb-1">Kyle hi</h1>
         <h3 class="mb-5">
           <em>Student/Scout/Programmer</em>
         </h3>
